# alltoken-proxy-test

./: .gitignore  README.md  profiles.example.json  prompt.md  pyproject.toml  test.js
.tmp/claude-clean-home/: .claude.json
.tmp/claude-clean-home/.claude/: history.jsonl
.tmp/claude-clean-home/.claude/backups/: .claude.json.backup.1774335791334
.tmp/claude-clean-home/.claude/plugins/: blocklist.json  known_marketplaces.json
.tmp/claude-clean-home/.claude/projects/-Users-leo-code-alltoken-proxy-test/: 1635be8e-8d49-4831-9bf0-ecd3e32c9946.jsonl
.tmp/claude-clean-home/.claude/sessions/: 27942.json
mitmproxy/flows/: cliproxy-flows.mitm
mitmproxy/home/: mitmproxy-ca-cert.p12  mitmproxy-ca-cert.pem  mitmproxy-ca.p12  mitmproxy-ca.pem
recovery/: default.recover.commit.sql  recovered.db
scripts/: build-grouped-exports.py  run-clean-claude.sh  start-claude-cliproxy-stack.sh  start-upstream-taps.sh  test-claude-clean.sh
tapchain/: __init__.py  cli.py  config.py  logging.py  proxy.py
